--- a/.github/workflows/deploy-to-amplify.yml
+++ b/.github/workflows/deploy-to-amplify.yml
@@ -34,13 +34,18 @@ jobs:
           VITE_APPSYNC_API_KEY: ${{ secrets.VITE_APPSYNC_API_KEY }}
           VITE_APPSYNC_REGION: ${{ secrets.VITE_APPSYNC_REGION }}
 
+      # Configure AWS credentials
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-2
+
+      # Install AWS Amplify CLI
+      - name: Install Amplify CLI
+        run: npm install -g @aws-amplify/cli
+
       # Deploy to AWS Amplify
       - name: Deploy to Amplify
-        uses: aws-actions/amplify-cli-action@v2
-        with:
-          amplify_command: publish
-          amplify_arguments: --yes
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ap-southeast-2
+        run: amplify publish --yes
