--- a/.github/workflows/deploy-to-amplify.yml
+++ b/.github/workflows/deploy-to-amplify.yml
@@ -45,23 +45,32 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-2
 
+      # Set up AWS CLI credentials file
+      - name: Set up AWS CLI credentials
+        run: |
+          mkdir -p ~/.aws
+          echo "[default]" > ~/.aws/credentials
+          echo "aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
+          echo "aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
+          echo "[default]" > ~/.aws/config
+          echo "region = ap-southeast-2" >> ~/.aws/config
+
       # Install AWS Amplify CLI
       - name: Install Amplify CLI
-        run: npm install -g @aws-amplify/cli@12.10.1
+        run: npm install -g @aws-amplify/cli@12.12.0 # Updated to a newer stable version
 
-      # Configure Amplify CLI
-      - name: Configure Amplify
-        run: |
-          amplify configure project --app-id ${{ secrets.AMPLIFY_APP_ID }} --env-name dev --yes
+      # Debug Amplify status
+      - name: Debug Amplify status
+        run: amplify status
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-southeast-2
 
-      # Debug Amplify status
-      - name: Debug Amplify status
-        run: amplify status
-
       # Deploy to AWS Amplify
       - name: Deploy to Amplify
         run: amplify publish --yes
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ap-southeast-2
