--- a/.github/workflows/deploy-to-amplify.yml
+++ b/.github/workflows/deploy-to-amplify.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20" # Adjust to match your Node.js version
+          node-version: "20"
           cache: "npm"
 
       # Install dependencies
@@ -57,15 +57,25 @@ jobs:
 
       # Install AWS Amplify CLI
       - name: Install Amplify CLI
-        run: npm install -g @aws-amplify/cli@12.12.0 # Updated to a newer stable version
+        run: npm install -g @aws-amplify/cli@latest
 
-      # Debug Amplify status
-      - name: Debug Amplify status
-        run: amplify status
+      # Debug Amplify environment
+      - name: Debug Amplify environment
+        run: |
+          pwd
+          ls -la
+          amplify env list
+          amplify status
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-southeast-2
+
+      # Create temporary directory for Amplify
+      - name: Create temporary Amplify directory
+        run: |
+          mkdir -p /tmp/amplify
+          echo "AMPLIFY_DIR=/tmp/amplify" >> $GITHUB_ENV
 
       # Deploy to AWS Amplify
       - name: Deploy to Amplify
@@ -74,3 +84,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-southeast-2
+          AMPLIFY_DIR: /tmp/amplify # Override Amplify CLI directory
