--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -6,8 +6,8 @@
   "javascript": {
     "framework": "react",
     "config": {
-      "SourceDir": "src",
-      "DistributionDir": "dist",
+      "SourceDir": "dist",
+      "DistributionDir": "build",
       "BuildCommand": "npm run-script build",
       "StartCommand": "npm run dev"
     }
