Fix project-config.json SourceDir and DistributionDir

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -6,13 +6,11 @@
   "javascript": {
     "framework": "react",
     "config": {
-      "SourceDir": "dist",
-      "DistributionDir": "build",
+      "SourceDir": "src",
+      "DistributionDir": "dist",
       "BuildCommand": "npm run-script build",
       "StartCommand": "npm run dev"
     }
   },
-  "providers": [
-    "awscloudformation"
-  ]
+  "providers": ["awscloudformation"]
 }
