--- a/.github/workflows/deploy-to-amplify.yml
+++ b/.github/workflows/deploy-to-amplify.yml
@@ -55,38 +55,31 @@ jobs:
           echo "[default]" > ~/.aws/config
           echo "region = ap-southeast-2" >> ~/.aws/config
 
+      # Install AWS Amplify CLI
+      - name: Install Amplify CLI
+        run: npm install -g @aws-amplify/cli@12.10.1
+
       # Debug environment
       - name: Debug environment
         run: |
           pwd
           ls -la
           ls -la dist/
-          aws sts get-caller-identity
-          aws amplify list-apps --query "apps[?appId=='${{ secrets.AMPLIFY_APP_ID }}']"
-          aws amplify list-branches --app-id ${{ secrets.AMPLIFY_APP_ID }}
+          amplify env list
+          amplify status
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-southeast-2
+          AMPLIFY_DIR: /tmp/amplify
+          AMPLIFY_USER_DIR: /tmp/amplify-user
 
-      # Upload files to S3 deployment bucket
-      - name: Upload to S3
-        run: aws s3 cp dist/ s3://amplify-frontend-dev-505cc-deployment/ --recursive
+      # Deploy to AWS Amplify
+      - name: Deploy to Amplify
+        run: amplify publish --yes --debug
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-southeast-2
-
-      # Invalidate CloudFront distribution
-      - name: Invalidate CloudFront
-        run: |
-          DISTRIBUTION_ID=$(aws amplify list-branches --app-id ${{ secrets.AMPLIFY_APP_ID }} --query "branches[?branchName=='dev'].distributionId" --output text)
-          if [ -z "$DISTRIBUTION_ID" ]; then
-            echo "Error: Could not retrieve distribution ID. Please set DISTRIBUTION_ID secret."
-            exit 1
-          fi
-          aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ap-southeast-2
+          AMPLIFY_DIR: /tmp/amplify
+          AMPLIFY_USER_DIR: /tmp/amplify-user
