--- a/.github/workflows/deploy-to-amplify.yml
+++ b/.github/workflows/deploy-to-amplify.yml
@@ -59,12 +59,23 @@ jobs:
       - name: Install Amplify CLI
         run: npm install -g @aws-amplify/cli@12.10.1
 
+      # Initialize Amplify environment
+      - name: Initialize Amplify
+        run: amplify init --app-id ${{ secrets.AMPLIFY_APP_ID }} --env-name dev --yes
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AMPLIFY_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AMPLIFY_SECRET_ACCESS_KEY }}
+          AWS_REGION: ap-southeast-2
+          AMPLIFY_DIR: /tmp/amplify
+          AMPLIFY_USER_DIR: /tmp/amplify-user
+
       # Debug environment
       - name: Debug environment
         run: |
           pwd
           ls -la
           ls -la dist/
+          ls -la amplify/
           amplify env list
           amplify status
         env:
@@ -76,7 +87,7 @@ jobs:
 
       # Deploy to AWS Amplify
       - name: Deploy to Amplify
-        run: amplify publish --yes --debug
+        run: amplify publish --yes --env-name dev --debug
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
