--- a/.github/workflows/deploy-to-amplify.yml
+++ b/.github/workflows/deploy-to-amplify.yml
@@ -59,12 +59,12 @@ jobs:
       - name: Install Amplify CLI
         run: npm install -g @aws-amplify/cli@12.10.1
 
-      # Initialize Amplify environment
-      - name: Initialize Amplify
-        run: amplify init --app-id ${{ secrets.AMPLIFY_APP_ID }} --env-name dev --yes
+      # Select Amplify environment
+      - name: Select Amplify environment
+        run: amplify env checkout dev
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AMPLIFY_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AMPLIFY_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-southeast-2
           AMPLIFY_DIR: /tmp/amplify
           AMPLIFY_USER_DIR: /tmp/amplify-user
@@ -77,7 +77,7 @@ jobs:
           ls -la dist/
           ls -la amplify/
           amplify env list
-          amplify status
+          amplify status --env-name dev
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
