--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ amplifytools.xcconfig
 !amplify/.config/project-config.json
 !amplify/team-provider-info.json
 !amplify/backend/amplify-meta.json
+.vercel
