--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "graphql": "^16.11.0",
     "postcss": "^8.5.6",
